--- a/index.html
+++ b/index.html
@@ -4,50 +4,113 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Xiao Mains</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <div class="header-logo">header logo</div>
-        <div class="link-one">link one</div>
-        <div class="link-two">link two</div>
-        <div class="link-three">link three</div>
-        <div class="header-content"><h1 class="website-meanings">Website Meaning</h1>
-            <div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, numquam, esse cum reprehenderit veritatis dolor corrupti mollitia accusamus obcaecati repudiandae architecto error atque incidunt tempora quidem id totam! Tenetur, repellendus.</p></div>
-            <div class="header-img"><img src="images/xiao-main-pic.jpg"></div>
-            <div><button>Sign Up</button></div>
+    <div class="container">
+        <nav class="xm navbar">
+            <div class="header-logo">
+                <img src="images/xiao-header.png">
+            </div>
+            <div class="header-links">
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+                <a href="#">Profile</a>
+            </div>
+        </nav>
+
+        <div class="xm hero">
+            <div class="hero-1 hero-cta">
+                <h1>Xiao Mains, Rise Up</h1>
+                <p>Xiao, a man amongst boys, has become the lord and saviour of Genshin Impact. This page is dedicated to my love for the little cutie himself.</p>
+                <button type="button">Main Him Now</button>
+            </div>
+            <div class="hero-1 hero-image">
+                <img src="images/xiao-main-pic.jpg" alt="genshin-xiao">
+            </div>
         </div>
 
-    </div>
-
-    <div class="content">
-        <div class="content-header"><h2>Content Header</h2></div>
-        <div>
-            <img class="content-img" src="images/short-king.webp"></div>
-            <div class="img-description">description</div>
-            <img class="content-img" src="images/elemental-skill.jpg"></div>
-            <div class="img-description">description</div>
-            <img class="content-img" src="images/emo-xiao.jpg"></div>
-            <div class="img-description">description</div>
-            <img class="content-img" src="images/short-king.webp"></div>
-            <div class="img-description">description</div>
+        <div class="xm content">
+            <h3>Favourite Xiao Features:</h3>
+            <div class="content-info">
+                <div>
+                    <img src="images/emo-xiao.jpg" alt="depressed">
+                    <p>lil depressed boi</p>
+                </div>
+                <div>
+                    <img src="images/elemental-skill.jpg" alt="skill">
+                    <p>shing-shing</p>
+                </div>
+                <div>
+                    <img src="images/w-rizz.webp" alt="w rizz">
+                    <p>has w rizz</p>
+                </div>
+                <div>
+                    <img style="object-fit: fill;" src="images/short-king.webp" alt="short king">
+                    <p>short king!</p>
+                </div>
+            </div>
         </div>
-    
-    <div class="quote">
-        <div class="quote-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dicta culpa dolorum quas illo exercitationem eos dolorem eligendi praesentium nesciunt ex, nihil reprehenderit doloribus itaque sapiente suscipit explicabo, maxime quod?</div>
-        <div class="quote-author">-Author, Title</div>
-    </div>
 
-    <div class="sign-up-container">
-        <div class="sign-up-title">Call to action! It's time!</div>
-        <div class="sign-up-description">Sign up for our blah blah blah</div>
-    </div>
+        <div class="quote">
+            <p>The Lantern Rite? Hmph, the time for humans to discard their glowing trash into the sea has returned.. How childish.. Though if you insist.. I will go with you.
+            </p>
+            <b>
+                - Xiao, The Infamous Environmentalist
+            </b>
+        </div>
 
+        <div class="xm skills">
+            <h3>His Super-Cool Skills:</h3>
+            <div class="skills-info">
+                <div>
+                    <img src="images/xiao-na.webp" alt="">
+                    <p>Normal Attack</p>
+                </div>
+                <div>
+                    <img src="images/xiao-skill.webp" alt="">
+                    <p>Elemental Skill</p>
+                </div>
+                <div>
+                    <img src="images/xiao-burst.webp" alt="">
+                    <p>Elemental Burst</p>
+                </div>
+            </div>
+        </div>
 
+        <div class="quote">
+            <p>..to be honest.. I'm not really about to try and get close to him. I mean.. all the people he's ever agreed to team up with are no longer with us...
+            </p>
+            <b>
+                - Ganyu, Professional Xiao Hater
+            </b>
+        </div>
 
+        <div class="xm friends">
+            <h3>His Super-Dead Friends:</h3>
+            <div class="besties">
+                <div>
+                    <img src="images/bonanus.webp" alt="">
+                    <p>Bonanus</p>
+                </div>
+                <div>
+                    <img src="images/indarias.webp" alt="">
+                    <p>Indarias</p>
+                </div>
+                <div>
+                    <img src="images/bosacius.webp" alt="">
+                    <p>Bosacius</p>
+                </div>
+                <div>
+                    <img src="images/menogias.webp" alt="">
+                    <p>Menogias</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
